--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -56,7 +56,7 @@ a {
 }
 a:hover,
 a:focus {
-  color: #0085a1;
+  color: #404040;
 }
 a img:hover,
 a img:focus {
@@ -139,14 +139,14 @@ hr.small {
   }
   .navbar-custom.is-fixed .navbar-brand:hover,
   .navbar-custom.is-fixed .navbar-brand:focus {
-    color: #0085a1;
+    color: #404040;
   }
   .navbar-custom.is-fixed .nav li a {
     color: #404040;
   }
   .navbar-custom.is-fixed .nav li a:hover,
   .navbar-custom.is-fixed .nav li a:focus {
-    color: #0085a1;
+    color: #404040;
   }
   .navbar-custom.is-visible {
 /* if the user changes the scrolling direction, we show the header */
@@ -179,7 +179,7 @@ hr.small {
 .intro-header .site-heading.archives,
 .intro-header .post-heading.archives,
 .intro-header .page-heading.archives {
-  color: #0085a1;
+  color: #404040;
   margin-top: 60px;
 }
 .intro-header .site-heading,
@@ -240,7 +240,7 @@ hr.small {
 .post-preview > a:hover,
 .post-preview > a:focus {
   text-decoration: none;
-  color: #0085a1;
+  color: #404040;
 }
 .post-preview > a > .post-title {
   font-size: 30px;
@@ -270,7 +270,7 @@ hr.small {
 }
 .post-preview > .post-meta > a:hover,
 .post-preview > .post-meta > a:focus {
-  color: #0085a1;
+  color: #404040;
   text-decoration: underline;
 }
 @media only screen and (min-width: 768px) {
@@ -374,7 +374,7 @@ footer .copyright {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #0085a1;
+  color: #404040;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eee;
@@ -393,8 +393,8 @@ form .row:first-child .floating-label-form-group {
 }
 .btn-default:hover,
 .btn-default:focus {
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #404040;
+  border: 1px solid #404040;
   color: #fff;
 }
 .pager {
@@ -413,8 +413,8 @@ form .row:first-child .floating-label-form-group {
 .pager li > a:hover,
 .pager li > a:focus {
   color: #fff;
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #404040;
+  border: 1px solid #404040;
 }
 .pager .disabled > a,
 .pager .disabled > a:hover,
@@ -427,12 +427,12 @@ form .row:first-child .floating-label-form-group {
 ::-moz-selection {
   color: #fff;
   text-shadow: none;
-  background: #0085a1;
+  background: #404040;
 }
 ::selection {
   color: #fff;
   text-shadow: none;
-  background: #0085a1;
+  background: #404040;
 }
 img::selection {
   color: #fff;
@@ -443,7 +443,7 @@ img::-moz-selection {
   background: transparent;
 }
 body {
-  webkit-tap-highlight-color: #0085a1;
+  webkit-tap-highlight-color: #404040;
 }
 article .container .row img {
   max-width: 100% !important;
@@ -635,9 +635,49 @@ pre .deletion {
 
 .comment-item {
   margin: 10px 0;
-  /* border-bottom: 1px solid #808080; */
+  border: 1px solid #fff;
 }
+
+.comment-item:hover,
+.comment-item:focus {
+  background-color: #404040;
+  border: 1px solid #404040;
+  color: #fff;
+}
+
 .comment-item span {
   margin-left: 10px;
   cursor: pointer;
+}
+
+.notice{
+  position: fixed;
+  left: 0;
+  top: 10%;
+  /* margin: 0 auto; */
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  font-size: 24px;
+  text-align: center;
+  opacity:0;
+  background-color: #fff;
+  animation-name:fadenum;
+  animation-duration:3s;
+  border: 1px solid #404040;
+
+}
+
+@keyframes fadenum{
+  0%{opacity:1;}
+  99%{opacity:1;}
+  100%{opacity:0;}
+}
+
+.close-comment-to-user-btn {
+  cursor: pointer;
+}
+
+.comment-to-user-box {
+  display: none;
 }
