--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -673,3 +673,26 @@ pre .deletion {
 .simditor-image-loading {
   background: rgba(0,0,0,0.5);
 }
+
+/*此为笔者网站较为个性化的鼠标指针样式，可结合个人需要自行修改*/
+body {
+	cursor: url(../mouse/Arrow.cur), default;
+}
+select{
+	cursor: url(../mouse/Hand.cur), pointer;
+}
+button,a:hover{
+	cursor: url(../mouse/Hand2.cur), pointer;
+}
+input{
+	cursor:url(../mouse/Help.cur), text;	
+}
+textarea,input:focus{
+	cursor:url(../mouse/IBeam.cur), text;	
+}
+code{
+	cursor: url(../mouse/Handwriting.cur), default;	
+}
+pre>code{
+	cursor: url(../mouse/Copy.cur), default;	
+}
